Androidでエミュレートできるようになるまでの変更

--- a/mdc_100_series/android/app/src/main/AndroidManifest.xml
+++ b/mdc_100_series/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round">
         <activity
+            android:exported="true"
             android:name=".MainActivity"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
